--- a/index.html
+++ b/index.html
@@ -46,21 +46,70 @@
 				<div class="cv-body">
 					<section class="cv-section">
 						<h3 class="cv-section__title">About me:</h3>
+						<div class="cv-section__body">
+							<p>I am 35 years old, I work as a freelance front-end developer. My goal is to update and structure js knowledge.</p>
+						</div>
 					</section>
 					<section class="cv-section">
 						<h3 class="cv-section__title">Skills:</h3>
+						<div class="cv-section__body">
+							<ul class="list">
+								<li class="list__item">HTML5/CSS3/JS</li>
+								<li class="list__item">SASS, PUG</li>
+								<li class="list__item">Gsap animations</li>
+								<li class="list__item">gulp, webpack</li>
+								<li class="list__item">Bootstrap</li>
+								<li class="list__item">BEM</li>
+								<li class="list__item">git</li>
+								<li class="list__item">FireBase</li>
+								<li class="list__item">Experience with Google PageSpeed optimizations 90+</li>
+								<li class="list__item">vuejs (nuxtjs)</li>
+							</ul>
+						</div>
 					</section>
 					<section class="cv-section">
 						<h3 class="cv-section__title">Code example:</h3>
+						<div class="cv-section__body">
+							<pre class='code-box'>
+								<code class='code-row'>const calculateAge = (a, b) =&gt; {</code>
+								<code class='code-row'>	if (a &lt; b) {</code>
+								<code class='code-row'>		return `You are ${b - a} ${b - a != 1 ? 'years' : 'year'} old.`;</code>
+								<code class='code-row'>	}</code>
+								<code class='code-row'>	else if (a &gt; b) {</code>
+								<code class='code-row'>		return `You will be born in ${a - b} ${a - b != 1 ? 'years' : 'year'}.`;</code>
+								<code class='code-row'>	}</code>
+								<code class='code-row'>	else {</code>
+								<code class='code-row'>		return `You were born this very year!`;</code>
+								<code class='code-row'>	}</code>
+								<code class='code-row'>}</code>
+							</pre>
+						</div>
 					</section>
 					<section class="cv-section">
 						<h3 class="cv-section__title">Experience:</h3>
+						<div class="cv-section__body">
+							<ul class="list">
+								<li class="list__item">4 years page-proofs</li>
+								<li class="list__item">1 year front-end</li>
+							</ul>
+						</div>
 					</section>
 					<section class="cv-section">
 						<h3 class="cv-section__title">Education:</h3>
+						<div class="cv-section__body">
+							<ul class="list">
+								<li class="list__item">BELARUSIAN STATE AGRARIAN TECHNICAL UNIVERSITY</li>
+								<li class="list__item">IT-academy "Base JS"</li>
+							</ul>
+						</div>
 					</section>
 					<section class="cv-section">
 						<h3 class="cv-section__title">English:</h3>
+						<div class="cv-section__body">
+							<ul class="list">
+								<li class="list__item">A1</li>
+							</ul>
+						</div>
 					</section>
 				</div>
 			</div>
