feat: add examples

--- a/index.html
+++ b/index.html
@@ -125,8 +125,34 @@
 						<section class="cv-section" id='examples'>
 							<h3 class="cv-section__title">Work examples:</h3>
 							<div class="cv-section__body">
-								<ul class="list">
-									<li class="list__item">123</li>
+								<ul class="cv-exmpl-list">
+									<li class="cv-exmpl-item">
+										<figure class="cv-exmpl-item__fig">
+											<img class='cv-exmpl-item__pic' src="images/miks-soft.jpg" alt="image">
+											<figcaption class="cv-exmpl-item__descr">
+												<a class="cv-exmpl-item__title" href='https://miks-soft.com/' target='_blank'>Miks</a>
+												<p class="cv-exmpl-item__text">PUG/SASS/JS-animations</p>
+											</figcaption>
+										</figure>
+									</li>
+									<li class="cv-exmpl-item">
+										<figure class="cv-exmpl-item__fig">
+											<img class='cv-exmpl-item__pic' src="images/trs.jpg" alt="image">
+											<figcaption class="cv-exmpl-item__descr">
+												<a class="cv-exmpl-item__title" href='https://trs.by/' target='_blank'>TRS</a>
+												<p class="cv-exmpl-item__text">Vue/Nuxt</p>
+											</figcaption>
+										</figure>
+									</li>
+									<li class="cv-exmpl-item">
+										<figure class="cv-exmpl-item__fig">
+											<img class='cv-exmpl-item__pic' src="images/naturino.jpg" alt="image">
+											<figcaption class="cv-exmpl-item__descr">
+												<a class="cv-exmpl-item__title" href='https://naturino.by/' target='_blank'>Naturino</a>
+												<p class="cv-exmpl-item__text">PUG/SASS/JS-animations</p>
+											</figcaption>
+										</figure>
+									</li>
 								</ul>
 							</div>
 						</section>
@@ -143,7 +169,7 @@
 							<h3 class="cv-section__title">English:</h3>
 							<div class="cv-section__body">
 								<ul class="list">
-									<li class="list__item">A1</li>
+									<li class="list__item">A2</li>
 								</ul>
 							</div>
 						</section>
