fix:  add exmpl description text

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 											<img class='cv-exmpl-item__pic' src="images/naturino.jpg" alt="image">
 											<figcaption class="cv-exmpl-item__descr">
 												<a class="cv-exmpl-item__title" href='https://naturino.by/' target='_blank'>Naturino</a>
-												<p class="cv-exmpl-item__text">PUG/SASS/JS-animations</p>
+												<p class="cv-exmpl-item__text">Vue/PUG/SASS/JS-animations</p>
 											</figcaption>
 										</figure>
 									</li>
